Fixed overlapping and refreshing

--- a/client/src/main/resources/css/AdminScreen.css
+++ b/client/src/main/resources/css/AdminScreen.css
@@ -74,6 +74,3 @@
   -fx-font-size: 12px;
 }
 
-.nag {
-  -fx-font-size: 25px;
-}
